--- a/.gitignore
+++ b/.gitignore
@@ -204,12 +204,13 @@ atlassian-ide-plugin.xml
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
-crashlytics-build.properties
+crashlytics - build.properties
 fabric.properties
 
 # Editor-based Rest Client
-.idea/httpRequests
+.idea / httpRequests
 
 # Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+.idea / caches / build_file_checksums.ser
 
+.idea /
